--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "private": true,
-  "name": "dev-site-documentation-template",
+  "name": "pwa-studio-doc-plans",
   "version": "1.0.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AdobeDocs/dev-site-documentation-template"
+    "url": "https://github.com/AdobeDocs/pwa-studio-doc-plans"
   },
   "author": {
-    "name": "Stephan Ringel",
-    "url": "https://github.com/icaraps"
+    "name": "Bruce Denham",
+    "url": "https://github.com/bdenham"
   },
   "dependencies": {
     "@adobe/gatsby-theme-aio": "^3.20.1",
-    "gatsby": "^3.13.0",
+    "gatsby": "^3.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -23,7 +22,18 @@
     "dev": "gatsby develop",
     "dev:https": "gatsby develop --https --host localhost.corp.adobe.com --port 9000",
     "build": "gatsby build",
+    "build:incremental": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "lint": "npm run lint:md src/pages",
+    "lint:md": "remark --quiet",
+    "prettier": "prettier --write",
+    "prettier:test": "prettier --check src"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1",
+    "remark-cli": "^9.0.0",
+    "remark-lint-list-item-indent": "^2.0.1",
+    "remark-preset-lint-recommended": "^5.0.0"
   }
 }
